noinst_PROGRAMS = DiskCacheTest

INCLUDES = -I../../Source/WebCore \
		   -I../../Source/WebCore/platform \
		   -I../../Source/WebCore/platform/mg \
		   -I../../Source/WebCore/platform/text \
		   -I../../Source/WebCore/loader/cache \
		   -I../../Source/WebCore/loader/cache/disk_cache \
		   -I../../Source/JavaScriptCore \
		   -I../../Source/JavaScriptCore/wtf \
		   -I../../Source/JavaScriptCore/wtf/text


DiskCacheTest_SOURCES = DiskCacheTestMain.cpp  		\
						TestManager.cpp  			\
						TestAssert.cpp				\
						DiskCacheBackendTest.cpp 	
